--- a/requirements.txt
+++ b/requirements.txt
@@ -12,5 +12,5 @@ Pillow==10.4.0; python_version >= '3.11' and python_version < '3.12'
 matplotlib==3.9.2; python_version >= '3.11' and python_version < '3.12'
 seaborn==0.13.2; python_version >= '3.11' and python_version < '3.12'
 branca==0.8.0; python_version >= '3.11' and python_version < '3.12'
-google-generative-ai==0.7.2; python_version >= '3.11' and python_version < '3.12'
+google-genai; python_version >= '3.11' and python_version < '3.12'
 pyarrow==17.0.0; python_version >= '3.11' and python_version < '3.12'
