--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,4 @@ seaborn==0.13.2; python_version >= '3.11' and python_version < '3.12'
 branca==0.8.0; python_version >= '3.11' and python_version < '3.12'
 google-genai; python_version >= '3.11' and python_version < '3.12'
 pyarrow==17.0.0; python_version >= '3.11' and python_version < '3.12'
+pyOpenSSL>=24.0.0; python_version >= '3.11' and python_version < '3.12'
