--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ numpy==1.26.4; python_version >= '3.11' and python_version < '3.12'
 plotly==5.24.0; python_version >= '3.11' and python_version < '3.12'
 folium==0.17.0; python_version >= '3.11' and python_version < '3.12'
 streamlit-folium==0.22.0; python_version >= '3.11' and python_version < '3.12'
-snowflake-connector-python==3.12.2; python_version >= '3.11' and python_version < '3.12'
+snowflake-snowpark-python; python_version >= '3.11' and python_version < '3.12'
 scikit-learn==1.5.2; python_version >= '3.11' and python_version < '3.12'
 reportlab==4.2.2; python_version >= '3.11' and python_version < '3.12'
 requests==2.32.3; python_version >= '3.11' and python_version < '3.12'
@@ -12,6 +12,8 @@ Pillow==10.4.0; python_version >= '3.11' and python_version < '3.12'
 matplotlib==3.9.2; python_version >= '3.11' and python_version < '3.12'
 seaborn==0.13.2; python_version >= '3.11' and python_version < '3.12'
 branca==0.8.0; python_version >= '3.11' and python_version < '3.12'
-google-genai; python_version >= '3.11' and python_version < '3.12'
+google-generativeai; python_version >= '3.11' and python_version < '3.12'
 pyarrow==17.0.0; python_version >= '3.11' and python_version < '3.12'
 pyOpenSSL>=24.0.0; python_version >= '3.11' and python_version < '3.12'
+cryptography>=41.0.0; python_version >= '3.11' and python_version < '3.12'
+python-dotenv; python_version >= '3.11' and python_version < '3.12'
