--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,8 @@ Pillow==10.4.0; python_version >= '3.11' and python_version < '3.12'
 matplotlib==3.9.2; python_version >= '3.11' and python_version < '3.12'
 seaborn==0.13.2; python_version >= '3.11' and python_version < '3.12'
 branca==0.8.0; python_version >= '3.11' and python_version < '3.12'
-google-generativeai; python_version >= '3.11' and python_version < '3.12'
+# Ensure we get the correct Google Generative AI package
+google-generativeai>=0.8.0,<1.0.0; python_version >= '3.11' and python_version < '3.12'
 pyarrow==17.0.0; python_version >= '3.11' and python_version < '3.12'
 pyOpenSSL>=24.0.0; python_version >= '3.11' and python_version < '3.12'
 cryptography>=41.0.0; python_version >= '3.11' and python_version < '3.12'
